--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
                         </i>
                     </label>
                     <ul class="main-menu wow fadeInDown">
-                        <li class="menu-item"><a href="javascript:void(0)">Inicio</a></li>
+                        <li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Nosotros</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Carta</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Blog</a></li>
