--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
                     <ul class="main-menu wow fadeInDown">
                         <li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Nosotros</a></li>
-                        <li class="menu-item"><a href="javascript:void(0)">Carta</a></li>
+                        <li class="menu-item"><a href="carta.html">Carta</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Blog</a></li>
                         <li id="nav-main-contact" class="menu-item"><a href="contacto.html">Contacto</a></li>
                     </ul>
