--- a/carta.html
+++ b/carta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,11 +24,12 @@
                         </i>
                     </label>
                     <ul class="main-menu wow fadeInDown">
-                        <li class="menu-item"><a href="index.html">Inicio</a></li>
+                        <<li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Nosotros</a></li>
                         <li class="menu-item"><a href="carta.html">Carta</a></li>
-                        <li class="menu-item"><a href="javascript:void(0)">Blog</a></li>
-                        <li id="nav-main-contact" class="menu-item"><a href="contacto.html"> Contacto</a></li>
+                        <li class="menu-item"><a href="https://www.facebook.com/FarrukitosHouse">Blog</a></li>
+                        <li class="menu-item"><a href="contacto.html">Contacto</a></li>
+                        <li id="nav-main-contact" class="menu-item"><a href="registro.html"> Iniciar Sesión</a></li>
                     </ul>
                 </nav>
             </div>
@@ -39,7 +40,7 @@
 
     <section class="wrap section">
         <div class="wrap-title-section wow fadeInDown">
-            <h1>Menú</h1>
+            <h1>Nuestra carta</h1>
         </div>
 
     </div>
