--- a/contacto.html
+++ b/contacto.html
@@ -28,8 +28,9 @@
                         <li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Nosotros</a></li>
                         <li class="menu-item"><a href="carta.html">Carta</a></li>
-                        <li class="menu-item"><a href="javascript:void(0)">Blog</a></li>
-                        <li id="nav-main-contact" class="menu-item"><a href="contacto.html">Contacto</a></li>
+                        <li class="menu-item"><a href="https://www.facebook.com/FarrukitosHouse">Blog</a></li>
+                        <li class="menu-item"><a href="contacto.html">Contacto</a></li>
+                        <li id="nav-main-contact" class="menu-item"><a href="registro.html"> Iniciar Sesión</a></li>
                     </ul>
                 </nav>
             </div>
@@ -59,7 +60,7 @@
                             <input type="tel" name="phone">
                         </p>
                         <p class="block">
-                           <label>Mensage</label> 
+                           <label>Mensaje</label> 
                             <textarea name="message" rows="3"></textarea>
                         </p>
                         <p class="block">
