--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,8 +29,9 @@
                         <li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="javascript:void(0)">Nosotros</a></li>
                         <li class="menu-item"><a href="carta.html">Carta</a></li>
-                        <li class="menu-item"><a href="javascript:void(0)">Blog</a></li>
-                        <li id="nav-main-contact" class="menu-item"><a href="contacto.html"> Contacto</a></li>
+                        <li class="menu-item"><a href="https://www.facebook.com/FarrukitosHouse">Blog</a></li>
+                        <li class="menu-item"><a href="contacto.html">Contacto</a></li>
+                        <li id="nav-main-contact" class="menu-item"><a href="registro.html"> Iniciar Sesión</a></li>
                     </ul>
                 </nav>
             </div>
@@ -49,6 +49,8 @@
                 </div>
             </section>
     </div>
+
+
     <!-- tarjetas de comida -->
     <section class="wrap section">
         <div class="wrap-title-section wow fadeIn">
@@ -58,7 +60,7 @@
 
             <!-- Item -->
             <div class="tarjeta-rest wow fadeInDown">
-                <img src="assets/img/carta/hamburguesa-casera.jpg">
+                <img src="assets/img/carta/hamburguesa-casera.jpg"> 
                 <div class="tarjeta-rest_info">
                     <div class="tarjeta-rest_info_detail">
                         <h2>La Casera.</h2>
@@ -230,6 +232,7 @@
             <div class="text-center text-element-footer">
                 <h5>Redes sociales</h5>
                 <div class="evenly">
+
                     <a target="_blank" href="https://www.facebook.com/FarrukitosHouse"><img src="assets/img/footer/facebook.png" alt="facebook.png"></a>
                     <a target="_blank" href="https://www.instagram.com/farrukitoshouse"><img src="assets/img/footer/instagram.png" alt="instagram.png"></a>
                     <a target="_blank" href="https://api.whatsapp.com/send?phone=51979776420&text=Quiero%20hacer%20un%20pedido"><img src="assets/img/footer/whatsapp.svg" alt="whatsapp.png"></a>
